2010-06-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Initial TB3.1 code

2010-06-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-integrator/global/common-dialog-overlay.js
	(_SIGetDialogType): added support for the "smtp" type.
	(SICommonDialogOnLoad): we reset the "tries" counter to 0 when the
	dialog has been popped up. We also only pop it up after 2 tries
	rather than only 1, since two SOGo dialog might popup at the same
	time.
	Finally, the checkbox status must be explicitly set to a boolean
	value.

2010-06-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-integrator/general/acl-dialog.js
	(_appendUserInList): order new items by keeping the special users
	entries at the end of the list.
	(onLoad): added code to asynchronously check if "/dav/public" is
	available before so that we knwo whether the "anonymous" user must
	be listed or not.

	* chrome/content/sogo-integrator/messenger/folders-update.js:
	(directoryChecker.foldersFromResponse): we now check the returned
	objects for the "collection" resource type. If not present, we
	skip the entry.

	* chrome/content/sogo-integrator/general/acl-dialog.js:
	(userIDopenRolesWindowForUser): we now longer pass the "isDefault"
	parameter.
	(editDefaultEntry): removed obsolete method.

	* chrome/content/sogo-integrator/calendar/roles-dialog.js
	(onLoad): same as below.

	* chrome/content/sogo-integrator/addressbook/roles-dialog.js
	(onLoad): we now resize the window when the edited user is the
	special "anonymous" user. In that case, we also remove the
	modification rights since there is no case where we would like
	unauthenticated modification of a calendar.

2010-06-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-integrator/general/acl-dialog.js,
	chrome/content/sogo-integrator/calendar/roles-dialog.js,
	chrome/content/sogo-integrator/addressbook/roles-dialog.js: added
	and modified code to handle public access rights as well as the